tests/core/errors/test_errors_data/.buckconfig
# Bucket-C fixture (Plan 35.6a). Uses kuro-specific knobs not yet
# migrated to CLI flags. See thoughts/shared/research/2026-05-04-fixture-bucket-classification.md

[buildfile]
name=TARGETS.fixture

[repositories]
root = .
toolchains = toolchains
prelude = prelude
cell = package_listing/cell

[project]
ignore = package_listing/*red/**

[kuro]
allow_eden_io = false
